<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/nav_map" />

        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_pin_drop_black_24dp"
            android:title="@string/nav_list" />


        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_profile" />


        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_input_black_24dp"
            android:title="@string/sair" />

    </group>



</menu>
