<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.df.brasilia.unb.cic.todeolho.ActivityCadastroPessoa">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/cadastro_pessoa_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_texto"
            android:fontFamily="@font/dosis"
            android:textSize="20dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/cadastro_pessoa_nome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/input_border"
            android:hint="@string/nome"
            app:layout_constraintTop_toBottomOf="@id/cadastro_pessoa_title"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/cadastro_pessoa_login"
            android:background="@drawable/input_border"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:hint="@string/log"
            app:layout_constraintTop_toBottomOf="@id/cadastro_pessoa_nome"/>


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/cadastro_pessoa_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_border"
            android:layout_marginVertical="10dp"
            android:hint="@string/prompt_email"
            app:layout_constraintTop_toBottomOf="@id/cadastro_pessoa_login"/>


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/cadastro_pessoa_senha"
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:background="@drawable/input_border"
            android:hint="@string/senha"
            app:layout_constraintTop_toBottomOf="@id/cadastro_pessoa_email"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/cadastro_pessoa_confirma"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_border"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:layout_marginVertical="10dp"
            android:hint="@string/confirm"
            app:layout_constraintTop_toBottomOf="@id/cadastro_pessoa_senha"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/cadastro_pessoa_cpf"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_border"
            android:layout_marginVertical="10dp"
            android:hint="@string/cpf"
            app:layout_constraintTop_toBottomOf="@id/cadastro_pessoa_confirma"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/cadastro_pessoa_telefone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_border"
            android:layout_marginVertical="10dp"
            android:hint="@string/telefone"
            app:layout_constraintTop_toBottomOf="@id/cadastro_pessoa_cpf" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/cadastro_pessoa_nascimento"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/nascimento"
            android:onClick="showDatePickerDialogPessoa"
            android:textColor="@color/white"
            android:fontFamily="@font/dosis"
            app:layout_constraintTop_toBottomOf="@id/cadastro_pessoa_telefone"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_editor_absoluteX="30dp" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/cadastro_pessoa_nascimento_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dosis"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@id/cadastro_pessoa_nascimento"/>


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/cadastro_pessoa_foto_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/foto"
            android:layout_marginVertical="10dp"
            app:layout_constraintTop_toBottomOf="@id/cadastro_pessoa_nascimento_info"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/cadastro_pessoa_foto"
            android:src="@drawable/ic_image_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="300dp"
            android:maxHeight="300dp"
            android:onClick="choseImageToUploadPessoa"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cadastro_pessoa_foto_label"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/cadastro_pessoa_salvar"
            android:text="@string/salvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:onClick="salvarP"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cadastro_pessoa_foto"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>




</android.support.v4.widget.NestedScrollView>